Update About page badges: combine data privacy badges, add accessibility badge, update structured data

--- a/public/about.html
+++ b/public/about.html
@@ -87,7 +87,8 @@
           "Customer Insights",
           "Local Data Processing",
           "No Tracking",
-          "GDPR Compliant"
+          "GDPR Compliant",
+          "Accessible Design"
         ]
       },
       "author": {
@@ -99,7 +100,7 @@
         "name": "segmentor.app"
       },
       "datePublished": "2025-10-09",
-      "dateModified": "2026-01-07",
+      "dateModified": "2026-01-08",
       "inLanguage": "en",
       "isAccessibleForFree": true,
       "audience": {
@@ -545,23 +546,7 @@
                             </svg>
                         </div>
                         <h3 style="color: #3a863e; margin-bottom: 8px; font-size: 1.125rem; font-weight: 600;">No Cloud Storage</h3>
-                        <p style="color: #666; font-size: 0.95rem;">Your data never leaves your computer. All processing happens locally.</p>
-                    </div>
-                    <div class="privacy-step" style="text-align: center;">
-                        <div class="privacy-step-icon" style="width: 60px; height: 60px; background: #3a863e; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; font-weight: 700; margin: 0 auto 16px; position: relative;">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="position: relative; z-index: 1;">
-                                <ellipse cx="12" cy="5" rx="9" ry="3"/>
-                                <path d="M3 5V19A9 3 0 0 0 21 19V5"/>
-                                <path d="M3 12A9 3 0 0 0 21 12"/>
-                            </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#3a863e" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="position: absolute; top: 2px; right: 2px; z-index: 2; background: white; border-radius: 50%;" aria-hidden="true">
-                                <circle cx="12" cy="12" r="10" fill="white"/>
-                                <path d="m15 9-6 6" stroke="#3a863e"/>
-                                <path d="m9 9 6 6" stroke="#3a863e"/>
-                            </svg>
-                        </div>
-                        <h3 style="color: #3a863e; margin-bottom: 8px; font-size: 1.125rem; font-weight: 600;">Zero Data Collection</h3>
-                        <p style="color: #666; font-size: 0.95rem;">We don't collect, store, or transmit any personal information. Zero data collection.</p>
+                        <p style="color: #666; font-size: 0.95rem;">Your data never leaves your computer. No cloud servers, no data storage. GDPR compliance by design.</p>
                     </div>
                     <div class="privacy-step" style="text-align: center;">
                         <div class="privacy-step-icon" style="width: 60px; height: 60px; background: #3a863e; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; font-weight: 700; margin: 0 auto 16px; position: relative;">
@@ -591,6 +576,23 @@
                         </div>
                         <h3 style="color: #3a863e; margin-bottom: 8px; font-size: 1.125rem; font-weight: 600;">100% Local Processing</h3>
                         <p style="color: #666; font-size: 0.95rem;">All analysis happens in your browser. Works offline—no data transfer required.</p>
+                    </div>
+                    <div class="privacy-step" style="text-align: center;">
+                        <div class="privacy-step-icon" style="width: 60px; height: 60px; background: #3a863e; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; font-weight: 700; margin: 0 auto 16px; position: relative;">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="position: relative; z-index: 1;" aria-hidden="true">
+                                <circle cx="16" cy="4" r="1"/>
+                                <path d="m18 19 1-7-6 1"/>
+                                <path d="m5 8 3-3 5.5 3-2.36 3.5"/>
+                                <path d="M4.24 14.5a5 5 0 0 0 6.88 6"/>
+                                <path d="M13.76 17.5a5 5 0 0 0-6.88-6"/>
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#3a863e" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="position: absolute; top: 2px; right: 2px; z-index: 2; background: white; border-radius: 50%;" aria-hidden="true">
+                                <circle cx="12" cy="12" r="10" fill="white"/>
+                                <path d="m9 12 2 2 4-4" stroke="#3a863e"/>
+                            </svg>
+                        </div>
+                        <h3 style="color: #3a863e; margin-bottom: 8px; font-size: 1.125rem; font-weight: 600;">Accessible Design</h3>
+                        <p style="color: #666; font-size: 0.95rem;">Built for everyone. Designed following WCAG 2.2 AA guidelines. Works with screen readers, keyboard navigation, and assistive technologies.</p>
                     </div>
                     <div class="privacy-step" style="text-align: center;">
                         <div class="privacy-step-icon" style="width: 60px; height: 60px; background: #3a863e; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; font-weight: 700; margin: 0 auto 16px; position: relative;">
