Fix TM logo proportions and SEO issues: shorten title, fix arrow aria-hidden

--- a/public/about.html
+++ b/public/about.html
@@ -12,7 +12,7 @@
     <meta name="google" content="notranslate">
     
     <!-- Comprehensive SEO Meta Tags -->
-    <title>Free Customer Segmentation Tool | segmentor.app - Turn Feedback Into Action Plans</title>
+    <title>Free Customer Segmentation Tool | segmentor.app</title>
     <meta name="description" content="Combine satisfaction AND loyalty into instant segments, then get strategic roadmaps for each. segmentor.app solves the #1 CX frustration: 'We have scores, now what?' Privacy-first, no registration needed. Free to use.">
     <meta name="author" content="segmentor.app" />
     <meta name="robots" content="index, follow, noai, noimageai" />
@@ -234,7 +234,7 @@
                     </cite>
                 </blockquote>
                 <div class="hero-actions" role="group" aria-label="Main actions" style="justify-content: center;">
-                    <a href="/tool/" class="btn btn-primary" aria-describedby="cta-description" style="font-size: 1.1rem; padding: 12px 32px;">Turn Analysis Into Action →</a>
+                    <a href="/tool/" class="btn btn-primary" aria-describedby="cta-description" style="font-size: 1.1rem; padding: 12px 32px;">Turn Analysis Into Action <span aria-hidden="true">→</span></a>
                 </div>
                 <div id="cta-description" class="sr-only">Start using segmentor.app to analyse your customer data</div>
                 <div class="hero-image" style="margin-top: 48px; text-align: center;">
@@ -522,7 +522,7 @@
                         <p style="font-size: 1.1em; line-height: 1.6; margin-bottom: 20px;">We've partnered with <strong>Teresa Monroe</strong>, Europe's leading Customer Experience (CX) and Employee Experience (EX) consulting agency. Whether you need help designing your CX program from the ground up or want expert analysis of your segmentation results, Teresa Monroe brings decades of experience turning customer data into business transformation.</p>
                         <div style="display: flex; gap: 16px; flex-wrap: wrap; align-items: center;">
                             <a href="/contact.html" class="btn btn-primary" style="background: #3a863e; color: white; padding: 12px 24px; border-radius: 6px; text-decoration: none; font-weight: 600; transition: background-color 0.2s;">Explore Consulting Services <span aria-hidden="true">→</span></a>
-                            <img src="/tm-logo.png" alt="Teresa Monroe" width="120" height="24" style="height: 24px; opacity: 0.7; margin-left: 8px;" />
+                            <img src="/tm-logo.png" alt="Teresa Monroe" style="height: 24px; opacity: 0.7; margin-left: 8px;" />
                         </div>
                     </div>
                 </div>
