Improve SEO: shorten meta description to optimal length, improve link text, add internal link

--- a/public/about.html
+++ b/public/about.html
@@ -13,7 +13,7 @@
     
     <!-- Comprehensive SEO Meta Tags -->
     <title>Free Customer Segmentation Tool | segmentor.app</title>
-    <meta name="description" content="Combine satisfaction AND loyalty into instant segments, then get strategic roadmaps for each. segmentor.app solves the #1 CX frustration: 'We have scores, now what?' Privacy-first, no registration needed. Free to use.">
+    <meta name="description" content="Free customer segmentation tool combining satisfaction and loyalty data. Get instant segments and strategic roadmaps. Privacy-first, no registration. Free to use.">
     <meta name="author" content="segmentor.app" />
     <meta name="robots" content="index, follow, noai, noimageai" />
     <meta name="language" content="en" />
@@ -206,7 +206,7 @@
       <a href="/about.html" class="nav-link">About</a>
       <a href="/faq.html" class="nav-link">FAQ</a>
       <a href="/contact.html" class="nav-link">Contact</a>
-      <a href="/tool/" class="nav-link nav-link-primary">Start</a>
+      <a href="/tool/" class="nav-link nav-link-primary">Start Analysis</a>
     </div>
   </div>
 </nav>
@@ -296,7 +296,7 @@
             <section class="section" aria-labelledby="solution-heading">
                 <h2 id="solution-heading" style="font-family: 'Montserrat', sans-serif; font-size: 2.2rem; font-weight: 600; color: #2c3e50; margin-bottom: 20px; text-align: center;">Why This Changes Everything</h2>
                 <p style="text-align: center; font-size: 1.2em; color: #666; margin-bottom: 20px; font-weight: 600;">Traditional tools show you satisfaction OR loyalty. We combine both to reveal the complete picture.</p>
-                <p style="text-align: center; font-size: 1.2em; color: #666; margin-bottom: 40px;">We solve the #1 CX frustration: "We have scores, now what?" segmentor.app seamlessly fuses satisfaction and loyalty into four clear segments, then delivers specific, strategic roadmaps for each. No complex setup, no data sharing, no registration—just actionable strategies in seconds.</p>
+                <p style="text-align: center; font-size: 1.2em; color: #666; margin-bottom: 40px;">We solve the #1 CX frustration: "We have scores, now what?" segmentor.app seamlessly fuses satisfaction and loyalty into four clear segments, then delivers specific, strategic roadmaps for each. No complex setup, no data sharing, no registration—just actionable strategies in seconds. <a href="/faq.html" style="color: #3a863e; text-decoration: underline;">Learn more in our FAQ</a>.</p>
                 
                 <div class="steps">
                     <div class="step">
