Fix SEO: Change nav link text to 'Start' with descriptive aria-label for Lighthouse compliance

--- a/public/about.html
+++ b/public/about.html
@@ -206,7 +206,7 @@
       <a href="/about.html" class="nav-link">About</a>
       <a href="/faq.html" class="nav-link">FAQ</a>
       <a href="/contact.html" class="nav-link">Contact</a>
-      <a href="/tool/" class="nav-link nav-link-primary">Start Analysis</a>
+      <a href="/tool/" class="nav-link nav-link-primary" aria-label="Start free customer segmentation analysis">Start</a>
     </div>
   </div>
 </nav>
