--- a/public/tm.html
+++ b/public/tm.html
@@ -173,7 +173,7 @@
 .nav-link {
   font-size: 1rem !important;
   font-weight: 500 !important;
-  font-family: 'Montserrat', sans-serif !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 @media (max-width: 768px) {
