Add contact page link to 'help' in FAQ page

--- a/public/faq.html
+++ b/public/faq.html
@@ -1551,7 +1551,7 @@ CUST002,6,4,Jane Doe</pre>
             <!-- Help Section -->
             <div class="section text-center">
                     <h2 style="font-family: 'Montserrat', sans-serif;">Still Need Help?</h2>
-                    <p>Can't find the answer you're looking for? We're here to help.</p>
+                    <p>Can't find the answer you're looking for? We're here to <a href="/contact.html" style="color: #3a863e; text-decoration: underline; font-weight: 600;">help</a>.</p>
                     <div class="help-actions">
                         <a href="/tool/" class="btn btn-primary">Start Using the Tool</a>
                         <a href="/tool/?trial=true" class="btn btn-secondary">Launch Demo Mode</a>
