SEO optimization: update sitemap dates, fix structured data dates, ensure all SEO elements are current

--- a/public/about.html
+++ b/public/about.html
@@ -100,7 +100,7 @@
         "name": "segmentor.app"
       },
       "datePublished": "2025-10-09",
-      "dateModified": "2026-01-08",
+      "dateModified": "2026-01-13",
       "inLanguage": "en",
       "isAccessibleForFree": true,
       "audience": {
@@ -206,7 +206,7 @@
       <a href="/about.html" class="nav-link">About</a>
       <a href="/faq.html" class="nav-link">FAQ</a>
       <a href="/contact.html" class="nav-link">Contact</a>
-      <a href="/tool/" class="nav-link nav-link-primary">Start Analysis</a>
+      <a href="/tool/" class="nav-link nav-link-primary">Start</a>
     </div>
   </div>
 </nav>
