--- a/public/faq.html
+++ b/public/faq.html
@@ -124,10 +124,26 @@
         },
         {
           "@type": "Question",
-          "name": "Can I monitor how customers change over time?",
+          "name": "Can I track customers over time?",
           "acceptedAnswer": {
             "@type": "Answer",
             "text": "Yes! If your data includes a Date column and you have the same customers (identified by email or ID) appearing at different times, the tool automatically shows a Historical Progress section. This lets you see how average satisfaction and loyalty trends over time, track individual customer movements between segments, identify customers who move multiple times (multi-movement journeys), and understand which transitions are most common. Tip: Include a Date column in your CSV and use consistent customer identifiers (email or ID) to enable historical tracking."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What date format do I need for Historical Progress?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "The tool accepts common date formats: dd/MM/yyyy (e.g., 15/03/2024), MM/dd/yyyy (e.g., 03/15/2024), or yyyy-MM-dd (e.g., 2024-03-15). The tool automatically detects the format based on your CSV headers or tries standard parsing. Dates don't need to be in chronological order—the tool sorts them automatically for each customer. Important: Each customer needs to appear with 2+ different dates (using the same email or ID) for Historical Progress to work."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can I export Historical Progress data?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes! Click the export button (download icon) next to the Historical Progress section title to download a CSV file containing all customers with 2+ dates. The export includes all dates for each customer (Date 1, Date 2, etc.), satisfaction and loyalty scores for each date, quadrant assignments for each date, and movement count and journey path summary. The file is saved as segmentor-app_Historical_Progress_data_DD-MM-YYYY-hh-mm.csv and is UTF-8 encoded for compatibility with Excel and other spreadsheet software."
           }
         }
       ]
@@ -955,7 +971,7 @@ CUST002,6,4,Jane Doe</pre>
 
                     <div class="faq-item" data-keywords="monitor historical progress track customers over time same customer different times multiple dates">
                         <div class="faq-question" onclick="toggleFAQ(this)">
-                            <h3>Can I monitor how customers change over time?</h3>
+                            <h3>Can I track customers over time?</h3>
                             <span class="faq-toggle">+</span>
                         </div>
                         <div class="faq-answer">
@@ -1239,6 +1255,41 @@ CUST002,6,4,Jane Doe</pre>
                         <div class="faq-answer">
                             <p><strong>Top Movements</strong> shows the most common <strong>single-step</strong> transitions (e.g., Hostages → Loyalists).</p>
                             <p><strong>Customer Journeys (multi-movement)</strong> shows <strong>full paths per customer</strong> across multiple check-ins (e.g., Hostages → Loyalists → Mercenaries), and lets you filter by <strong>Minimum movements</strong> (2+, 3+, etc.).</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="historical progress date format requirements CSV date column">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>What date format do I need for Historical Progress?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>The tool accepts common date formats:</p>
+                            <ul>
+                                <li><strong>dd/MM/yyyy</strong> (e.g., 15/03/2024)</li>
+                                <li><strong>MM/dd/yyyy</strong> (e.g., 03/15/2024)</li>
+                                <li><strong>yyyy-MM-dd</strong> (e.g., 2024-03-15)</li>
+                            </ul>
+                            <p>The tool automatically detects the format based on your CSV headers or tries standard parsing. Dates don't need to be in chronological order—the tool sorts them automatically for each customer.</p>
+                            <p><strong>Important:</strong> Each customer needs to appear with <strong>2+ different dates</strong> (using the same email or ID) for Historical Progress to work.</p>
+                        </div>
+                    </div>
+
+                    <div class="faq-item" data-keywords="historical progress export CSV download data">
+                        <div class="faq-question" onclick="toggleFAQ(this)">
+                            <h3>Can I export Historical Progress data?</h3>
+                            <span class="faq-toggle">+</span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Yes! Click the export button (download icon) next to the Historical Progress section title to download a CSV file containing all customers with 2+ dates.</p>
+                            <p>The export includes:</p>
+                            <ul>
+                                <li>All dates for each customer (Date 1, Date 2, etc.)</li>
+                                <li>Satisfaction and loyalty scores for each date</li>
+                                <li>Quadrant assignments for each date</li>
+                                <li>Movement count and journey path summary</li>
+                            </ul>
+                            <p>The file is saved as <code>segmentor-app_Historical_Progress_data_DD-MM-YYYY-hh-mm.csv</code> and is UTF-8 encoded for compatibility with Excel and other spreadsheet software.</p>
                         </div>
                     </div>
 
