Add: Longitudinal Tracking card to About page
- Add new 'Longitudinal Tracking' card after Proximity Analysis in 'See It In Action' section

- Follow text-image layout pattern (alternating from Proximity Analysis)

- Include screenshot of Historical Progress Movement Flow Visualization

--- a/public/about.html
+++ b/public/about.html
@@ -359,6 +359,16 @@
                             <p style="color: #666; font-size: 1.05rem; line-height: 1.7;">Identify customers positioned near segment boundaries who could move between segments with targeted interventions. Our advanced proximity analysis spots at-risk shifts and calculates conversion targets. Discover opportunities to transform Mercenaries into Loyalists or prevent Hostages from becoming Defectors. Turn static segments into dynamic, predictive strategies.</p>
                         </div>
                     </div>
+                    
+                    <div class="screenshot-item" style="display: grid; grid-template-columns: 1fr 1fr; gap: 48px; align-items: center; margin-bottom: 32px;">
+                        <div>
+                            <h4 style="color: #3a863e; font-size: 1.5rem; font-weight: 600; margin-bottom: 16px;">Longitudinal Tracking</h4>
+                            <p style="color: #666; font-size: 1.05rem; line-height: 1.7;">Monitor customer segment changes over time using multiple datapoints, enabling you to track progress, measure the impact of your strategies, and predict future trends—all processed securely in your browser.</p>
+                        </div>
+                        <div>
+                            <img src="/screenshot-progress.png" alt="Historical Progress Movement Flow Visualization showing customer transitions between segments over time" width="800" height="600" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);" loading="lazy" />
+                        </div>
+                    </div>
                 </div>
                 
                 <div style="text-align: center; margin-top: 30px;">
